packages/clippier/tests/snapshots/business_logic_tests__ci_steps_command_complex_ubuntu.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: ci_steps
---
npm install
npm run build
