packages/clippier/tests/snapshots/business_logic_tests__ci_steps_command_json_output.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: parsed
---
- "npm install\nnpm run build"
