packages/clippier/tests/snapshots/business_logic_tests__ci_steps_with_command_and_toolchain.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: filtered_parsed
---
- ciSteps: "mkdir packages/app/tauri/dist\npnpm install\ncargo build"
  dependencies: apt-get update && apt-get install -y build-essential
  features:
    - backend
    - default
    - frontend
    - tauri
  name: test-app
  nightly: false
  os: ubuntu
  path: packages/test-app
  requiredFeatures: ~
  toolchains: "free_disk_space\npnpm\nnode"
