packages/clippier/tests/snapshots/business_logic_tests__ci_steps_with_features.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: normalize_paths(parsed)
---
- os: ubuntu
  path: packages/test-app
  name: test-app
  features:
    - tauri
  requiredFeatures: ~
  nightly: false
  dependencies: apt-get update && apt-get install -y build-essential
  ciSteps: "mkdir packages/app/tauri/dist\npnpm install\ncargo build"
  ciToolchains: "free_disk_space\npnpm\nnode"
