packages/clippier/tests/snapshots/business_logic_tests__dependencies_command_json_output.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: parsed
---
- "apt-get update && apt-get install -y libsqlite3-dev\napt-get update && apt-get install -y build-essential"
- apt-get update && apt-get install -y build-essential
- "apt-get update && apt-get install -y build-essential\napt-get update && apt-get install -y nodejs npm"
- "apt-get update && apt-get install -y build-essential\napt-get update && apt-get install -y nodejs npm\napt-get update && apt-get install -y nodejs npm"
