packages/clippier/tests/snapshots/business_logic_tests__dependencies_command_single_package.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: dependencies
---
apt-get update && apt-get install -y libsqlite3-dev
apt-get update && apt-get install -y build-essential
