packages/clippier/tests/snapshots/business_logic_tests__dependencies_command_with_features.snap
---
source: packages/clippier/tests/business_logic_tests.rs
expression: dependencies
---
apt-get update && apt-get install -y build-essential
apt-get update && apt-get install -y build-essential
apt-get update && apt-get install -y nodejs npm
apt-get update && apt-get install -y nodejs npm
